Fixed recruiting image not showing up in chrome

--- a/BLT_WWW/Content/app.css
+++ b/BLT_WWW/Content/app.css
@@ -34,6 +34,6 @@
 }
 
 .recruitment-well img {
-    height:28px;
-    width:28px;
+    min-height:28px;
+    min-width:28px;
 }
